# RVCP-Real-Time-Path-Tracer

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  README.md  compute_pipeline_stage.txt  graphics_pipeline_stage.txt  justfile  swapchain_image.txt  test.cpp  test_image.txt
Notes/: README.md
Vulkan/: .gitignore  CMakeLists.txt  README.md
Vulkan/engine/: CMakeLists.txt
Vulkan/engine/shader/glsl/: shader.frag
assets/shaders/: mandelbrot.comp  ray_tracer.comp  ray_tracer_games101_branch.comp
docs/: VulkanDataStructureSummary.md
engine/: CMakeLists.txt
engine/shader/: CMakeLists.txt
engine/shader/cmake/: generate_shader_cpp_file.cmake
engine/shader/glsl/: shader.vert
engine/source/: CMakeLists.txt  main.cpp
records/: compute_pipeline_layout.set_layouts.txt  compute_pipeline_layout.txt  compute_pipeline_stage.txt  compute_shader.txt  compute_shader_entry_point.txt
scripts/: sample_method_comparison_3d.cpp  wtf_random.cpp
scripts/glsl-preprocessor/: glsl-preprocessor.py
src/: common.rs  main.rs
src/examples/: common.rs  compute_shader.rs  copy_buffer.rs  graphics_pipeline.rs  image.rs  image_with_compute_shader.rs  mod.rs  window.rs
src/mandelbrot/: mod.rs  vulkan.rs
src/ray_tracer/: camera.rs  config.rs  light.rs  main.rs  material.rs  mod.rs  ray_tracer.rs  scene.rs  shader.rs  shape.rs  utils.rs  vulkan.rs
src/ray_tracer/scene/: camera.rs  material.rs  mesh.rs  mod.rs  sphere.rs
src/ray_tracer_deprecated/: mod.rs  shader.rs  vulkan.rs
src/ray_tracer_deprecated/scene/: camera.rs  light_deprecated.rs  material.rs  mesh.rs  mod.rs
src/ray_tracer_games101_branch/: ray_tracer.rs  vulkan.rs
src/ray_tracer_games101_branch/scene/: camera.rs  mod.rs
